--- a/scss/style.scss
+++ b/scss/style.scss
@@ -235,7 +235,7 @@ hr.star-primary {
 // Cover
 //
 .bg {
-  background-image: url('../img/bg_back_.jpg');
+  background-image: url('../img/bg_back.jpg');
   background-size: cover;
   position: relative;
   width: 100%;
