--- a/scss/style.scss
+++ b/scss/style.scss
@@ -510,6 +510,9 @@ section.success {
   padding-bottom: 20px;
   padding-top: 30px;
   text-align: center;
+  img {
+	height: 160px;
+  }
 }
 
 #map {
