Updated sponsors + added compoc, stem outreach
Fixed capital one logo on mobile.
Optimised larger sponsor images so the page loads faster.
Added CompSoc + Stem outreach partners.

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -515,6 +515,7 @@ section.success {
   }
 }
 
+
 #map {
     width: 100%;
   height: 450px;
@@ -607,6 +608,11 @@ section.success {
 @media (max-width: 769px) {
   .sponsor-img {
     margin: 0;
+  }
+
+  .feature-sponsor {
+    height: 100%;
+    width: 100%;
   }
 }
 
