Replace PHP Dependency with Grunt
- Split `index.html` into `head.html` and `end.html` and moved into `templates` directory
- All page fragments changed to html from php
- Grunt concats and minifies all html page fragments and outputs to `index.html`
- Changed quote function from php to javascript, moved into `js/app.js`
- `Index.html` and `development.html` are now generated files, added to gitignore
- Update `README.md`

--- a/templates/head.html
+++ b/templates/head.html
@@ -6,7 +6,8 @@
   - If you are reading the source code,
   - you definitely should come!
   -
-  -->
+-->
+
 <head>
   <!-- Character encoding -->
   <meta charset="utf-8">
@@ -60,32 +61,4 @@
 </head>
 
 <body id="page-top" class="index">
-
-  <?php
-
-  include 'templates/navbar.php';
-
-  include 'templates/cover.php';
-
-  include 'templates/speakers.php';
-
-  include 'templates/workshops.php';
-
-  include 'templates/about.php';
-
-  include 'templates/schedule.php';
-
-  include 'templates/register.php';
-
-  include 'templates/faq.php';
-
-  include 'templates/sponsors.php';
-
-  include 'templates/footer.php';
-
-  ?>
-
-  <script src="main.min.js"></script>
-
-</body>
-</html>
+<body onload="random_quote()">
