--- a/templates/sponsors.html
+++ b/templates/sponsors.html
@@ -13,8 +13,7 @@
       <h4>If you're interested in becoming a partner, contact us <a class="email-text" href="mailto:psxad2@nottingham.ac.uk">here</a>.</h4>
     </div>
 
-    <?php $classes = "sponsor-img col-lg-4 col-md-4 col-sm-4 col-xs-12"; ?>
-
+    
     <div class="row">
       <div class="sponsor-img col-lg-12 col-md-12 col-sm-12">
         <h3>Women in Tech 2016 is brought to you by</h3>
@@ -28,52 +27,52 @@
         <h3>Our other partners include</h3>
       </div>
 
-      <div class="<?php echo $classes; ?>">
+      <div class="sponsor-img col-lg-4 col-md-4 col-sm-4 col-xs-12">
         <a href="//intel.com"><img src="img/sponsors/intel.png" /></a>
       </div>
-      <div class="<?php echo $classes; ?>">
+      <div class="sponsor-img col-lg-4 col-md-4 col-sm-4 col-xs-12">
         <a href="//ustwo.com/"><img src="img/sponsors/ustwo.jpeg"  /></a>
       </div>
-      <div class="<?php echo $classes; ?>">
+      <div class="sponsor-img col-lg-4 col-md-4 col-sm-4 col-xs-12">
         <a href="//ef.com"><img src="img/sponsors/ef.png" /></a>
       </div>
-      <div class="<?php echo $classes; ?>">
+      <div class="sponsor-img col-lg-4 col-md-4 col-sm-4 col-xs-12">
         <a href="//mlh.io/"><img src="img/sponsors/mlh.png" /></a>
       </div>
-      <div class="<?php echo $classes; ?>">
+      <div class="sponsor-img col-lg-4 col-md-4 col-sm-4 col-xs-12">
         <a href="//nottingham.ac.uk"><img class="small" src="img/sponsors/uon.png" style="height: 100px; margin-top: 15px;" /></a>
       </div>
 
-      <div class="<?php echo $classes; ?>">
+      <div class="sponsor-img col-lg-4 col-md-4 col-sm-4 col-xs-12">
         <a href="//www.su.nottingham.ac.uk/societies/society/Hack/">
           <img src="img/sponsors/Hacksoc.png" />
         </a>
       </div>
-      <div class="<?php echo $classes; ?>">
+      <div class="sponsor-img col-lg-4 col-md-4 col-sm-4 col-xs-12">
         <a href="//bcs.org/bcswomen"><img src="img/sponsors/bcs-women.jpg" /></a>
       </div>
-      <div class="<?php echo $classes; ?>">
+      <div class="sponsor-img col-lg-4 col-md-4 col-sm-4 col-xs-12">
         <a href="//www.codeclub.org.uk/"><img src="img/sponsors/code-club.png" /></a>
       </div>
-      <div class="<?php echo $classes; ?>">
+      <div class="sponsor-img col-lg-4 col-md-4 col-sm-4 col-xs-12">
         <a href="//gov.uk/dstl"><img src="img/sponsors/dstl.jpeg" style="padding: 30px;"/></a>
       </div>
-      <div class="<?php echo $classes; ?>">
+      <div class="sponsor-img col-lg-4 col-md-4 col-sm-4 col-xs-12">
         <a href="//nottinghack.org.uk/"><img src="img/sponsors/hackspace.png"  /></a>
       </div>
-      <div class="<?php echo $classes; ?>">
+      <div class="sponsor-img col-lg-4 col-md-4 col-sm-4 col-xs-12">
         <a href="//www.su.nottingham.ac.uk/societies/society/CivilEngineering/"><img src="img/sponsors/civsoc.png" style="width: 150px;" /></a>
       </div>
-      <div class="<?php echo $classes; ?>">
+      <div class="sponsor-img col-lg-4 col-md-4 col-sm-4 col-xs-12">
         <a href="//www.su.nottingham.ac.uk/societies/society/PublicSpeaking/"><img src="img/sponsors/public-speaking.png" /></a>
       </div>
-      <div class="<?php echo $classes; ?>">
+      <div class="sponsor-img col-lg-4 col-md-4 col-sm-4 col-xs-12">
         <a href="//www.su.nottingham.ac.uk/societies/society/uon-feminists/"><img src="img/sponsors/uon-feminists.png" /></a>
       </div>
-      <div class="<?php echo $classes; ?>">
+      <div class="sponsor-img col-lg-4 col-md-4 col-sm-4 col-xs-12">
         <a href="//www.su.nottingham.ac.uk/societies/society/compsoc/"><img src="img/sponsors/compsoc.png" style="height: 150px;" /></a>
       </div>
-      <div class="<?php echo $classes; ?>">
+      <div class="sponsor-img col-lg-4 col-md-4 col-sm-4 col-xs-12">
         <a href="//www.su.nottingham.ac.uk/societies/society/stemoutreach/"><img src="img/sponsors/stem-outreach-nottingham.png" style="height: 150px;" /></a>
       </div>
     </div>
