--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1315,7 +1315,7 @@
 		background-size: auto, cover;
 		background-position: top left, center 0;
 		background-attachment: fixed, fixed;
-		font-family: 'Roboto Slab', sans-serif;
+		font-family: 'Lato', sans-serif;
 		font-size: 18pt;
 		line-height: 1.75em;
 		font-weight: 300;
@@ -1342,7 +1342,7 @@
 		}
 
 	input, textarea, select {
-		font-family: 'Roboto Slab', sans-serif;
+		font-family: 'Lato', sans-serif;
 		font-size: 18pt;
 		line-height: 1.75em;
 		font-weight: 300;
@@ -1356,7 +1356,7 @@
 		font-weight: 400;
 		text-transform: uppercase;
 		line-height: 1.75em;;
-		font-family: 'Montserrat', sans-serif;
+		font-family: 'caviar', sans-serif;
 	}
 
 	h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
