Made inspired hero line caviar

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2022,6 +2022,7 @@
 				letter-spacing: 3px;
 				padding: 0;
 				margin-top: 0.35em;
+				font-family: "caviar", sans-serif;
 			}
 
 				#header header p:before {
